--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  transition: 0.4s;
 
   #sign-in-link,
   #sign-up-link {
@@ -32,6 +33,7 @@
   .nav-line {
     height: 36px;
     background-color: black;
+    transition: 0.4s;
   }
 
   .nav-elements {
@@ -48,6 +50,7 @@
       background-size: contain;
       background-repeat: no-repeat;
       width: 130px;
+      transition: 0.4s;
 
       a {
         width: inherit;
@@ -86,6 +89,7 @@
           justify-content: center;
           align-items: center;
           border-radius: 2px;
+          transition: 0.4s;
 
           .no-avatar {
             font-size: 3rem;
