--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -84,7 +84,7 @@
             <% end %>
           </div>
           <div class="invite-link-container">
-            <div class="event-url"><%=  %></div>
+            <div class="event-url"><%= "http://hostit.club/events/#{@event.id}" %></div>
             <div class="event-url-copy">Copy link</div>
           </div>
         </div>
