commiting before merging new main

--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -76,7 +76,7 @@ p:hover #socials-fb, #socials-in, #socials-sp, #socials-ln, #socials-tw { transi
     transform: scale(1.2);
   }
   #socials-ln:hover {
-    color: #eeeeee;
+    color: #0a66c2;
     transform: scale(1.2);
   }
 
