--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,11 +7,11 @@
         </div>
         <div id = 'center-textbox'>
             <ul> 
-            <li><i id ="socials-fb" class="fab fa-facebook"></i></li>
-            <li><i id ="socials-in" class="fab fa-instagram-square"></i></li>
-            <li><i id ="socials-tw" class="fab fa-twitter-square"></i></li>
-            <li><i id ="socials-ln" class="fab fa-linkedin"></i></li>
-            <li><i id ="socials-sp" class="fab fa-spotify"></i></li>
+            <li><i id ="socials-icon" class="fab fa-facebook"></i></li>
+            <li><i id ="socials-icon" class="fab fa-instagram-square"></i></li>
+            <li><i id ="socials-icon" class="fab fa-twitter-square"></i></li>
+            <li><i id ="socials-icon" class="fab fa-linkedin"></i></li>
+            <li><i id ="socials-icon" class="fab fa-spotify"></i></li>
             </ul>
         </div>
         <div id = 'right-textbox'>
