--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -44,25 +44,10 @@ font-size: 30px;
 #purple-bar { 
   p:hover{text-decoration: underline;}
 }
-#socials-fb, #socials-in, #socials-sp, #socials-ln, #socials-tw { transition: all .2s ease-in-out; }
+#socials-icon { transition: all .2s ease-in-out; }
 
-#socials-fb:hover {
-    color: #3B5998;
+#socials-icon:hover {
+    color:white;
     transform: scale(1.2);
   }
-  #socials-tw:hover {
-    color: #3d98a9;
-    transform: scale(1.2);
-  }
-  #socials-in:hover {
-    color: #9a55a3;
-    transform: scale(1.2);
-  }
-  #socials-sp:hover {
-    color: #65983b;
-    transform: scale(1.2);
-  }
-  #socials-ln:hover {
-    color: #eeeeee;
-    transform: scale(1.2);
-  }
+  
