--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,7 +1,6 @@
 <div class="container">
-
   <h1>Add item to bring to the list</h1>
-  <%= simple_form_for @item do |f| %>
+  <%= simple_form_for [@event, @item] do |f| %>
     <%= f.input :name, :label => "What would you like  to bring?"  %>
     <%= f.submit "Add item", class: "btn-devise" %>
 </div>
