--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -77,7 +77,7 @@
 
   <div class="event-items-playlist">
     <div class="bring-list">
-      <div class="items-list">
+      <div class="items-list" background-color: white >
       <li>
       <% @event.items.each do |item| %>
           <% if item.user_id != nil %>
