--- a/app/assets/stylesheets/dashboard/_dashboard.scss
+++ b/app/assets/stylesheets/dashboard/_dashboard.scss
@@ -53,7 +53,7 @@
   margin-right: 4px;
   display: table;
   margin-bottom: 4px;
-  p {
+  a {
     color: white;
     text-align: center;
     vertical-align: middle;
@@ -72,7 +72,7 @@
   margin-right: 4px;
   display: table;
   margin-bottom: 4px;
-  p {
+  a {
     color: white;
     text-align: center;
     vertical-align: middle;
@@ -90,7 +90,7 @@
   border-width: 2px;
   display: table;
   margin-bottom: 4px;
-  p {
+  a {
     color: white;
     text-align: center;
     vertical-align: middle;
@@ -102,18 +102,21 @@
   font-weight: bold;
   font-size: 16px;
   background-color: black;
+  text-decoration: none;
 }
 
 .guest-button:hover {
   font-weight: bold;
   font-size: 16px;
   background-color: black;
+  text-decoration: none;
 }
 
 .invitation-button:hover {
   font-weight: bold;
   font-size: 16px;
   background-color: black;
+  text-decoration: none;
 }
 
 .date-box {
@@ -135,9 +138,9 @@
 
 .event-card-section {
   display: flex;
-  justify-content: space-between;
+  justify-content: left;
   background-color: $beige;
-  margin-bottom: 40px;
+  margin-bottom: 60px;
   padding: 40px 30px 10px 30px;
   flex-wrap: wrap;
   position: relative;
@@ -151,8 +154,9 @@
   border-radius: 2px;
   border: solid;
   background-color: white;
-  margin-top: 20px;
-  margin-bottom: 40px;
+  // margin-top: 20px;
+  // margin-bottom: 40px;
+  margin: 30px 15px 25px 15px;
   width: 270px;
   color: black;
 }
