added a custom marker in the mapbox and changedt the style

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,7 @@
 <div id="button-area" style="background-color:#FFFDF7; width:50%; height:50%; float:left">
     <div id="header-buttons">
         <%= link_to "Learn More", "#learnmore", class: "button-main" %>
-        <%= link_to "Launch", "#launch", class: "button-main" %>
+        <%= link_to "Create Event", "#launch", class: "button-main" %>
     </div>
 </div>
 
