--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -16,9 +16,9 @@
 
     <% else %>
         <div class="legend">
-          <div class="host-button"><%= link_to "Hosting", dashboard_index_path, method: :get %></div>
-          <div class="guest-button"><%= link_to "Attending", dashboard_index_path, method: :get %></div>
-          <div class="invitation-button"><%= link_to "Pending", dashboard_index_path, method: :get %></div>
+          <div class="host-button"><%= link_to "Hosting", dashboard_index_path(filtering: "hosting") %></div>
+          <div class="guest-button"><%= link_to "Attending", dashboard_index_path(filtering: "accepted") %></div>
+          <div class="invitation-button"><%= link_to "Pending", dashboard_index_path(filtering: "pending") %></div>
         </div>
 
       <% @created_ats.each do |day| %>
@@ -27,59 +27,67 @@
           <div class="date-box"> <%= day[0].strftime("%A, %b %d") %> </div>
           <% day[1].each do |day_event| %>
 
-          <%= link_to event_path(day_event.id) do %>
-          <div class="event-card-link">
+            <%= link_to event_path(day_event.id) do %>
+              <div class="event-card-link">
 
-            <div class="event-card">
-
-              <div class="event-card-header"><h6 id="event-title"><%= "#{day_event.title}" %></h6>
+<!--  -->
                 <% if day_event.user == current_user %>
-                  <div class="event-card-status-circle-host"></div>
+                  <div class="event-card-hosting">
                 <% elsif @invitations_data.include?([day_event.id, "accepted"]) %>
-                  <div class="event-card-status-circle-guest"></div>
+                  <div class="event-card-attending">
                 <% elsif @invitations_data.include?([day_event.id, "pending"]) %>
-                  <div class="event-card-status-circle-invitation"></div>
+                  <div class="event-card-pending">
                 <% end %>
+                    <div class="event-card-header"><h6 id="event-title"><%= "#{day_event.title}" %></h6>
+                      <% if day_event.user == current_user %>
+                        <div class="event-card-status-circle-host"></div>
+                      <% elsif @invitations_data.include?([day_event.id, "accepted"]) %>
+                        <div class="event-card-status-circle-guest"></div>
+                      <% elsif @invitations_data.include?([day_event.id, "pending"]) %>
+                        <div class="event-card-status-circle-invitation"></div>
+                      <% end %>
+
+                    </div>
+                    <% if day_event.banner.attached? %>
+                      <div class="event-card-body" style="background-image: url('<%= cl_image_path day_event.banner.key %>')">
+                    <% else %>
+                      <div class="event-card-body" style="background-image: url(https://images.unsplash.com/photo-1605478328994-f93e98217da7?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxzZWFyY2h8NDV8fHBhdHRlcm4lMjBkYXJrfGVufDB8fDB8&auto=format&fit=crop&w=800&q=60)">
+                    <% end %>
+
+                      <% if day_event.user == current_user %>
+                         <div class="overlay-host">
+                      <% elsif @invitations_data.include?([day_event.id, "accepted"]) %>
+                        <div class="overlay-guest">
+                      <% elsif @invitations_data.include?([day_event.id, "pending"]) %>
+                        <div class="overlay-invitation">
+                      <% end %>
+                          <p><i class="far fa-clock"></i> <%= day_event.scheduled_at.strftime("%l:%M %p") %></p>
+                          <p><i class="fas fa-map-marker-alt"></i> <%= day_event.location %></p>
+                        </div>
+
+
+                      <% if @invitations_data.include?([day_event.id, "pending"]) %>
+                        <div class="event-card-footer-symbols">
+                          <%= link_to(invitation_path(day_event.invitations.where(receiver_id: current_user.id).first, status: "accepted"), title: "Edit event",method: :patch) do %>
+                            <i class="fas fa-check-circle"></i>
+                          <% end %>
+                          <%= link_to(invitation_path(day_event.invitations.where(receiver_id: current_user.id).first, status: "declined"), method: :patch) do  %>
+                            <i class="fas fa-times-circle"></i>
+                          <% end %>
+                        </div>
+                      <% end %>
+
+                    </div>
+                  </div>
+<!--  -->
+
               </div>
-
-              <% if day_event.banner.attached? %>
-                <div class="event-card-body" style="background-image: url('<%= cl_image_path day_event.banner.key %>')">
-              <% else %>
-                <div class="event-card-body" style="background-image: url(https://images.unsplash.com/photo-1605478328994-f93e98217da7?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxzZWFyY2h8NDV8fHBhdHRlcm4lMjBkYXJrfGVufDB8fDB8&auto=format&fit=crop&w=800&q=60)">
-              <% end %>
-
-                <% if day_event.user == current_user %>
-                  <div class="overlay-host">
-                <% elsif @invitations_data.include?([day_event.id, "accepted"]) %>
-                  <div class="overlay-guest">
-                <% elsif @invitations_data.include?([day_event.id, "pending"]) %>
-                  <div class="overlay-invitation">
-                <% end %>
-                  <p><i class="far fa-clock"></i> <%= day_event.scheduled_at.strftime("%l:%M %p") %></p>
-                  <p><i class="fas fa-map-marker-alt"></i> <%= day_event.location %></p>
-                </div>
-              <% if @invitations_data.include?([day_event.id, "pending"]) %>
-                <div class="event-card-footer-symbols">
-                  <%= link_to(invitation_path(day_event.invitations.where(receiver_id: current_user.id).first, status: "accepted"), title: "Edit event",method: :patch) do %>
-                    <i class="fas fa-check-circle"></i>
-                  <% end %>
-                  <%= link_to(invitation_path(day_event.invitations.where(receiver_id: current_user.id).first, status: "declined"), method: :patch) do  %>
-                    <i class="fas fa-times-circle"></i>
-                  <% end %>
-                </div>
-              <% end %>
-              </div>
-            </div>
-
-          </div>
-        <% end %>
-
-        <% end %>
+            <% end %>
+          <% end %>
         </div>
       <% end %>
     <% end %>
   </div>
-
 </div>
 
 
