--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -512,6 +512,73 @@
       border: 1.5px solid black;
       border-radius: 2px;
       margin-bottom: 32px;
+      padding: 16px;
+      overflow: scroll;
+      display: flex;
+      flex-direction: column;
+
+      .message-container {
+        display: flex;
+        margin-bottom: 16px;
+        width: 60%;
+        flex-direction: row;
+        border-radius: 2px;
+
+        .chat-avatar {
+          width: 45px;
+          height: 60px;
+          border: 1.5px solid black;
+          border-radius: 2px;
+          background-size: cover;
+          margin-right: 8px;
+        }
+
+        .message {
+          border-left: 6px solid $violet;
+          background: #ab99fb33;
+          padding: 8px;
+          width: 80%;
+
+          .message-username-time {
+            display: flex;
+
+            .message-username {
+              margin-right: 8px;
+              font-size: 0.9rem;
+            }
+
+            .message-time {
+              font-size: 0.8rem;
+              color: gray;
+              align-self: center;
+            }
+          }
+
+          .username-time-right {
+            justify-content: flex-end;
+          }
+
+          .message-content {
+            font-size: 1.1rem;
+          }
+
+          .message-content-user {
+            text-align: right;
+          }
+        }
+
+        .message-user {
+          align-self: flex-end;
+          border-right: 6px solid $green;
+          border-left: none;
+          background: #57886c33;
+        }
+      }
+
+      .message-container-user {
+        align-self: flex-end;
+        flex-direction: column;
+      }
     }
     .chat-form {
       display: flex;
@@ -519,31 +586,54 @@
       border: 1.5px solid black;
       border-radius: 2px;
       background-color: $white;
-      #chat-input {
-        background-color: $white;
-        font-size: 1.3rem;
-        width: 95%;
-        border: none;
-        border-radius: 0;
-        padding: 8px 16px;
-      }
-
-      .send-button {
-        background-color: $white;
-        width: 5%;
+      form {
         display: flex;
-        justify-content: center;
-        align-items: center;
-        a {
+        width: 100%;
+
+        .form-group {
+          width: 100%;
+          margin: 0;
+          &:focus {
+            outline: 0;
+          }
+        }
+
+        .form-control {
+          background-color: $white;
+          font-size: 1.3rem;
+          width: 95%;
+          border: none;
+          border-radius: 0;
+          padding: 8px 16px;
+          &:focus {
+            outline: 0;
+            box-shadow: none;
+          }
+        }
+
+        .send-button {
+          background-color: $white;
+          width: 5%;
           display: flex;
           justify-content: center;
           align-items: center;
-          width: 100%;
-          font-size: 1.7rem;
-          color: $black;
-          &:hover {
-            text-decoration: none;
-            color: $magenta;
+          border: none;
+
+          &:focus {
+            outline: 0;
+          }
+
+          i {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            font-size: 1.7rem;
+            color: $black;
+            &:hover {
+              text-decoration: none;
+              color: $magenta;
+            }
           }
         }
       }
