--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -64,12 +64,13 @@
         <% end %>
       </div>
       <a href="" class="list-button button-invite">See list</a>
+    
     </div>
     
-    <div id="map"
-      data-markers="<%= @marker.to_json %>"
-      data-mapbox-api-key="<%= ENV["MAPBOX_API_KEY"]%>">
-    </div>
+      <div id="map"
+        data-markers="<%= @marker.to_json %>"
+        data-mapbox-api-key="<%= ENV["MAPBOX_API_KEY"]%>">
+      </div>
 
     <div class="invite-modal">
       <div class="invite-content">
@@ -134,6 +135,9 @@
         </div>
         <button id="close-button"><i class="far fa-window-close"></i></button>
       </div>
+    </div>
+    <div id="button-map">
+    <a href="https://www.google.com/maps/search/?api=1&query=<%= @event.latitude %>,<%= @event.longitude %>" target="_blank", class="button-map">Open Google Maps</a>
     </div>
   </div>
 
