--- a/app/assets/stylesheets/dashboard/_dashboard.scss
+++ b/app/assets/stylesheets/dashboard/_dashboard.scss
@@ -24,6 +24,24 @@
   justify-content: flex-end;
 }
 
+.button-filter {
+  background-color:$magenta;
+  cursor: pointer;
+  font-weight: bold;
+  color:white;
+  text-decoration:none;
+  padding: 5px 20px 5px 20px;
+  border: 1.5px solid black;
+  border-radius:3px;
+  text-decoration: none;
+   &:hover {
+    text-decoration: none;
+    background-color:$black;
+    color: white;
+  }
+}
+
+
 .no-events {
   display: flex;
   justify-content: space-around;
