--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -160,10 +160,9 @@
   </div >
   <div class="event-chat" id="event-chat"> 
     <div class="chat-box">
-      <% @event.chatroom.messages.each do |message| %>
+      <% @event.messages.each do |message| %>
         <% if message.user == current_user %>
         <div class="message-container message-container-user" id="message-<%= message.id %>">
-        <a href="linkto google <%= message.id %>,<%= message.id %>"></a>
         <% else %>
         <div class="message-container" id="message-<%= message.id %>">
         <% end %>
@@ -200,7 +199,7 @@
       <% end %>
     </div>
     <div class="chat-form">
-      <%= simple_form_for [@event, Message.new], achor: "event-chat" do |f| %>
+      <%= simple_form_for [@event, Message.new], anchor: "event-chat" do |f| %>
         <%= f.input :content, id: "chat-input", label: false, placeholder: "Chat with the other guests.." %>
         <%= button_tag type: :submit, class: "send-button" do %>
           <i class="far fa-paper-plane"></i>
