fixed message displaying issues in chat

--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -558,11 +558,12 @@
           }
 
           .username-time-right {
-            justify-content: flex-end;
+            margin-left: auto;
           }
 
           .message-content {
             font-size: 1.1rem;
+            word-wrap: break-word;
           }
 
           .message-content-user {
