--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -137,34 +137,46 @@
     </div>
   </div>
 
-  <div class="event-items-playlist">
-    <div class="bring-list">
-      <div class="items-list" background-color: white >
-      <li>
-      <% @event.items.each do |item| %>
-          <% if item.user_id != nil %>
-         <ul> <%= item.name %>
-          <%= item.user.first_name %> </ul>
-          <% else %>
-          <ul> <%= item.name %> 
-          <%= button_to 'Bring it', event_item_path(item), method: :patch %> </ul>
-                   <% end %>
-      <% end %>
-      </li>
-    </div>
-      <div class="bring-form">
-               <div class="add-item" >
-                <%= simple_form_for [@event, @item] do |f| %>
-          <%= f.input :name, :label => "Enter item"  %>
-          <%= f.submit "Add Item", class: "button-submit" %>  
-          <% end %>
-          </div>
+  <div class="items-playlist" id='items-anchor' >
+    <div class ='items-container'>
+    <h2 id="items-title"> What does this party need?</h2>
+      <div class="list-container" background-color: white >
+        <%# <h2>Anything this party needs?</h2> %>
+        <div class ="items-list">
+            <table>
+            <tr><th>Item</th><th>Brought by</th></tr>
+            <% @event.items.each do |item| %>
+              <% if item.user_id != nil %>
+                  <tr><td> <%= item.name %></td>
+                  <td><%= item.user.first_name %></td></tr>
+                <% else %>
+                <tr><td><%= item.name %></td>
+                  <td><button type="button" class="button-create"><%= button_to 'Bring it', event_item_path(item), method: :patch, remote: true %></button></td>
+             
+                <% end %>
+            <% end %>
+            </table>
+        </div>
+        <div class="items-form">
+            <%= simple_form_for [@event, @item] do |f| %>
+            <div class="add-item">
+              <%= f.input :name, :placeholder => "Enter item", label: false %>
+              <%= f.submit "Add Item", class: "button-create" %>  
+            </div>
+            <% end %>
+        </div>
       </div>
     </div>
-    <div class="playlist">
-    <iframe src="https://open.spotify.com/embed/playlist/0K0RsJ0xxaTDZIKQ1vszY3" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    <div class ='playlist-container'>
+      <div class="playlist">
+        <h2>Music</h2>
+        <iframe src="https://open.spotify.com/embed/playlist/0K0RsJ0xxaTDZIKQ1vszY3" width="300" height="420" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+      </div>
     </div>
   </div>
+
+
+
 
   <div class="event-chat"> 
     <div class="chat-box">
