added customs styling to scrollbar

--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -86,7 +86,7 @@
   }
 
   .event-guest-map {
-    position:relative;
+    position: relative;
     background-color: $beige;
     border-radius: 2px;
     padding: 48px;
@@ -285,6 +285,7 @@
         height: 50vh;
         display: flex;
         flex-direction: column;
+        overflow-x: hidden;
 
         &::-webkit-scrollbar {
           width: 8px;
@@ -301,10 +302,6 @@
 
         &::-webkit-scrollbar-thumb:hover {
           background: $magenta;
-        }
-
-        &::-webkit-scrollbar-corner {
-          background-color: $beige;
         }
 
         .invitee {
@@ -513,10 +510,28 @@
       border: 1.5px solid black;
       border-radius: 2px;
       margin-bottom: 32px;
-      padding: 16px;
+      padding: 16px 8px 16px 16px;
       overflow: scroll;
       display: flex;
       flex-direction: column;
+      overflow-x: hidden;
+
+      &::-webkit-scrollbar {
+        width: 8px;
+      }
+
+      &::-webkit-scrollbar-track {
+        background: $white;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background: $black;
+        border-radius: 2px;
+      }
+
+      &::-webkit-scrollbar-thumb:hover {
+        background: $magenta;
+      }
 
       .message-container {
         display: flex;
@@ -663,19 +678,19 @@
   right: 130px;
   bottom: 25px;
   padding: 0 42px 42px 42px;
-    .button-map {
-      background-color:#DD1155;
-      cursor: pointer;
-      color:white;
-      text-decoration:none;
-      padding: 15px 20px 15px 20px;
-      border: 1.5px solid black;
-      border-radius:3px;
+  .button-map {
+    background-color: #dd1155;
+    cursor: pointer;
+    color: white;
+    text-decoration: none;
+    padding: 15px 20px 15px 20px;
+    border: 1.5px solid black;
+    border-radius: 3px;
+    text-decoration: none;
+    &:hover {
       text-decoration: none;
-        &:hover {
-          text-decoration: none;
-          background-color:black;
-          color: white;
-        }
-      }
+      background-color: black;
+      color: white;
     }
+  }
+}
