--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -8,23 +8,26 @@
     <% if @created_ats.empty? %>
       <div class="no-events">
         <div class="no-events-message">
-          <p id="no-events-message-text">You don't have any upcoming events at this moment.</p>
+          <p id="no-events-message-text">Nothing to see here.</p>
+          <%= link_to "back to Dashboard", dashboard_index_path, class: "button-back-to-dashboard" %>
           <p>Why don't you throw a little get together for your friends?</p>
           <%= link_to "Create", new_event_path, class: "button-create-home" %>
         </div>
       </div>
 
     <% else %>
-        <div class="legend">
-          <%= form_tag dashboard_index_path, method: :get do %>
-            <%= check_box_tag 'filtering[]', 'hosting', params[:filtering].try(:include?, ("hosting")) %>
-            <%= label_tag "HOSTING" %>
-            <%= check_box_tag 'filtering[]', 'accepted', params[:filtering].try(:include?, ("accepted")) %>
-            <%= label_tag "ATTENDING" %>
-            <%= check_box_tag 'filtering[]', 'pending', params[:filtering].try(:include?, ("pending")) %>
-            <%= label_tag "PENDING" %>
-            <%= submit_tag "Filter", class:'button-filter' %>
-          <% end %>
+        <div class="filter-row">
+          <div class="filter-content">
+            <%= form_tag(dashboard_index_path, method: :get, class: "filter-form") do %>
+              <%= check_box_tag 'filtering[]', 'hosting', params[:filtering].try(:include?, ("hosting")), class: "checkbox-hosting" %>
+              <%= label_tag "HOSTING", nil, id: "filter-label-hosting" %>
+              <%= check_box_tag 'filtering[]', 'accepted', params[:filtering].try(:include?, ("accepted")), class: "checkbox-accepted" %>
+              <%= label_tag "ATTENDING", nil, id: "filter-label-accepted" %>
+              <%= check_box_tag 'filtering[]', 'pending', params[:filtering].try(:include?, ("pending")), class: "checkbox-pending" %>
+              <%= label_tag "PENDING", nil, id: "filter-label-pending" %>
+              <%= submit_tag "Filter", class:'button-filter' %>
+            <% end %>
+          </div>
         </div>
 
       <% @created_ats.each do |day| %>
@@ -40,17 +43,17 @@
                 <% if day_event.user == current_user %>
                   <div class="event-card-hosting">
                 <% elsif @invitations_data.include?([day_event.id, "accepted"]) %>
-                  <div class="event-card-attending">
+                  <div class="event-card-accepted">
                 <% elsif @invitations_data.include?([day_event.id, "pending"]) %>
                   <div class="event-card-pending">
                 <% end %>
                     <div class="event-card-header"><h6 id="event-title"><%= "#{day_event.title}" %></h6>
                       <% if day_event.user == current_user %>
-                        <div class="event-card-status-circle-host"></div>
+                        <div class="event-card-status-circle-hosting"></div>
                       <% elsif @invitations_data.include?([day_event.id, "accepted"]) %>
-                        <div class="event-card-status-circle-guest"></div>
+                        <div class="event-card-status-circle-accepted"></div>
                       <% elsif @invitations_data.include?([day_event.id, "pending"]) %>
-                        <div class="event-card-status-circle-invitation"></div>
+                        <div class="event-card-status-circle-pending"></div>
                       <% end %>
 
                     </div>
@@ -61,11 +64,11 @@
                     <% end %>
 
                       <% if day_event.user == current_user %>
-                         <div class="overlay-host">
+                         <div class="overlay-hosting">
                       <% elsif @invitations_data.include?([day_event.id, "accepted"]) %>
-                        <div class="overlay-guest">
+                        <div class="overlay-accepted">
                       <% elsif @invitations_data.include?([day_event.id, "pending"]) %>
-                        <div class="overlay-invitation">
+                        <div class="overlay-pending">
                       <% end %>
                           <p><i class="far fa-clock"></i> <%= day_event.scheduled_at.strftime("%l:%M %p") %></p>
                           <p><i class="fas fa-map-marker-alt"></i> <%= day_event.location %></p>
