--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -143,33 +143,8 @@
 
   <div class="items-playlist" id='items-anchor' >
     <div class ='items-container'>
-    <h2 id="items-title"> What does this party need?</h2>
-      <div class="list-container" background-color: white >
-        <%# <h2>Anything this party needs?</h2> %>
-        <div class ="items-list">
-            <table>
-            <tr><th>Item</th><th>Brought by</th></tr>
-            <% @event.items.each do |item| %>
-              <% if item.user_id != nil %>
-                  <tr><td> <%= item.name %></td>
-                  <td><%= item.user.first_name %></td></tr>
-                <% else %>
-                <tr><td><%= item.name %></td>
-                  <td><button type="button" class="button-create"><%= button_to 'Bring it', event_item_path(item), method: :patch, remote: true %></button></td>
-             
-                <% end %>
-            <% end %>
-            </table>
-        </div>
-        <div class="items-form">
-            <%= simple_form_for [@event, @item] do |f| %>
-            <div class="add-item">
-              <%= f.input :name, :placeholder => "Enter item", label: false %>
-              <%= f.submit "Add Item", class: "button-create" %>  
-            </div>
-            <% end %>
-        </div>
-      </div>
+    <h2 id="items-title"> Who's bringing what'?</h2>
+      <%= render "shared/items_form" %>
     </div>
     <div class ='playlist-container'>
       <div class="playlist">
